src/objects/Round_Robin__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Round Robin</relationshipLabel>
        <relationshipName>Round_Robin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assgned_Name__c</fullName>
        <formula>Account__r.Owner.FirstName  + &quot; &quot; +  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assgned Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>TEXT(Account__r.Account_New_RR_Assignmment_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Number__c</fullName>
        <formula>VALUE(Name)</formula>
        <label>RR Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Round Robin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Round Robin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>